--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h1>Welcome!</h1>
     <br />
     <br />
-    <h2><href a="https://ian.rocks/ian_pgp.asc">Add my PGP key.</a></h2>
+    <h2><a href="https://ian.rocks/ian_pgp.asc">Add my PGP key.</a></h2>
     <br />
     <br /?
         <p>This website hosted in the nerdest way possible, Github.</p>
